@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2018 the original author or authors.
+ *    Copyright 2009-2021 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -18,6 +18,8 @@ package org.apache.ibatis.scripting;
 import java.util.HashMap;
 import java.util.Map;
 
+import org.apache.ibatis.util.MapUtil;
+
 /**
  * @author Frank D. Martinez [mnesarco]
  */
@@ -31,13 +33,13 @@ public class LanguageDriverRegistry {
     if (cls == null) {
       throw new IllegalArgumentException("null is not a valid Language Driver");
     }
-    if (!LANGUAGE_DRIVER_MAP.containsKey(cls)) {
+    MapUtil.computeIfAbsent(LANGUAGE_DRIVER_MAP, cls, k -> {
       try {
-        LANGUAGE_DRIVER_MAP.put(cls, cls.newInstance());
+        return k.getDeclaredConstructor().newInstance();
       } catch (Exception ex) {
         throw new ScriptingException("Failed to load language driver for " + cls.getName(), ex);
       }
-    }
+    });
   }
 
   public void register(LanguageDriver instance) {
@@ -49,7 +51,7 @@ public class LanguageDriverRegistry {
       LANGUAGE_DRIVER_MAP.put(cls, instance);
     }
   }
-  
+
   public LanguageDriver getDriver(Class<? extends LanguageDriver> cls) {
     return LANGUAGE_DRIVER_MAP.get(cls);
   }
